# platform

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: DetriDependencies.cmake  DetriPackageConfig.cmake.in
src/detri/: platform.hpp  platform_event.hpp  platform_exceptions.hpp  platform_win32.cpp  window.hpp  window_win32.cpp
src/test/: window_integration_test.cpp
